[package]
name = "sudo-boo"
description = "A program that scare users when running with root permission"
version = "1.0.2"
edition = "2021"
license-file = "LICENSE"
keywords=["boo"]
categories = ["command-line-utilities"]
authors = ["developomp <developomp@protonmail.com>"]
repository = "https://github.com/developomp/sudo-boo"
include = ["/src", "README.md"]

[[bin]]
name = "boo"

[dependencies]
